--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".NewWordActivity"
-            android:exported="false" />
+            android:name=".NewWordActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
